--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     "CoverArtURL": "https://i.scdn.co/image/ab67616d0000b2739d6bd2afa2987a69b7b55f72"
   },
   {
-    "Title": "El mar querer",
+    "Title": "El mal querer",
     "Artist": "Rosalía",
     "CoverArtURL": "https://travellercollective.com/cdn/shop/articles/original.jpg?v=1611856203"
   },
